# SU2-NJL-Diquark

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wrap.cpp  wrap.i
TMQGP/: IntGSL.cpp  IntGSL.h  Integrator.h  Interpolator.cpp  Interpolator.h  Meson_PhaseShift_and_Pressure.cpp  Meson_PhaseShift_and_Pressure.h  Meson_Polarization.cpp  Meson_Polarization.h  TMInterpolator_P.cpp  TMInterpolator_P.h  test.cpp  test.h
ipy/: Diquark_Chi_2_Fixed_Gd.csv  Diquark_Chi_2_Zero_GV.csv  PNJL.ipynb  Press_v_Energy_Tzero.csv
lib/: TMQGP.py
